fixed text alignment

--- a/ip-address-tracker-master/assets/css/style.css
+++ b/ip-address-tracker-master/assets/css/style.css
@@ -69,6 +69,8 @@ hr {
     background-color: white;
     top: 200px;
     width: 1100px;
+    height: auto;
+    text-align: left;
     z-index: 2;
 }
 
